# jhdl

./: .cproject  .gitignore  .gitmodules  .project  HISTORY  Makefile  README.md  include.mak  release.sh  setup.sh
.github/workflows/: blank.yml
config/: jhdl.conf
ieee/: .gitignore  Makefile
lib/: Makefile  install_systemc.sh
lib/debug/: .gitignore  Makefile  debug.vhd  debug_foreign.cpp
scripts/: ini_file_reader.py  library_config.py  parse_expression.py  recurse_dependencies.py  unit_tests.sh
scripts/test/: test_parse_expression.py
src/: .gitignore  CMakeLists.txt  Makefile  hdlc  hdlc.cpp  hdlc.sh  hdlf  hdlf.cpp  hdls  jhdl  jhdl.cpp  setup.sh  sim.cpp
src/ast/: CMakeLists.txt  Makefile  Scanner.cpp  Scanner.h  Text.cpp  Text.h  aggregate.hpp  alias_declaration.hpp  architecture.hpp  array_definition.hpp  array_subtype_definition.hpp  array_type.hpp  assignment.hpp  assignment_condition.hpp  association_element.hpp  association_element_formal_part.hpp  association_list.hpp  attribute.hpp  basic_identifier.hpp  basic_identifier_list.hpp  block_statement.hpp  case_statement.hpp  case_statement_alternative.hpp  case_statement_choise.hpp  character.hpp  choise.hpp  choises.hpp  component_instance.hpp  concurrent_statement.hpp  conditional_statement.hpp  constant_declaration.hpp  context_clause.hpp  declaration.hpp  declaration_initialization.hpp  design_file.hpp  design_unit.hpp  element_association.hpp  element_declaration.hpp  element_declaration_list.hpp  entity.hpp  (+75 more)
src/debug/: CMakeLists.txt  Makefile  debug.cpp  debug.hpp
src/exceptions/: CMakeLists.txt  exceptions.cpp  exceptions.hpp
src/generator/: #parameters.cpp#  CMakeLists.txt  Makefile  area_container.cpp  class_container.cpp  config.cpp  config.hpp  constructor.cpp  database.cpp  database.hpp  declarations.cpp  declarations.hpp  definition.cpp  definition.hpp  design_file.cpp  design_file.hpp  expression.cpp  expression.hpp  file_container.cpp  file_info.cpp  file_info.hpp  general.cpp  includes.cpp  info_writer.hpp  name_converter.cpp  name_converter.hpp  parameters.cpp  parameters.hpp  parameters_database.cpp  sequential.cpp  sequential.hpp  systemc.cpp  systemc.hpp
src/generator/database/: CMakeLists.txt  database.cpp  database.hpp  general.cpp  general.hpp  global_database.cpp  global_database.hpp  local_database.cpp  local_database.hpp  name_map.cpp  name_map.hpp
src/generator/expression/: CMakeLists.txt  Makefile  expected_type.cpp  expected_type.hpp  expression.cpp  expression.hpp
src/kernel/: CMakeLists.txt  Makefile  vhdl_alias.hpp  vhdl_array.hpp  vhdl_range.hpp
src/kernel/lib/: Makefile  simulation_engine.hpp  systemc.cpp  systemc.h  vhdl.cpp  vhdl.h  vhdl_access.hpp  vhdl_alias.hpp  vhdl_architecture.hpp  vhdl_array.cpp  vhdl_array.hpp  vhdl_enum.cpp  vhdl_enum.hpp  vhdl_exception.hpp  vhdl_file.hpp  vhdl_interface.hpp  vhdl_object.hpp  vhdl_process.hpp  vhdl_range.hpp  vhdl_resolved.hpp  vhdl_standard.cpp  vhdl_standard.hpp  vhdl_std_env.cpp  vhdl_std_env.hpp  vhdl_type.cpp  vhdl_type.hpp
src/output/: CMakeLists.txt  output.cpp  output.hpp
src/parser/: CMakeLists.txt  Makefile  base.hpp  design_file.cpp  design_file.cpp~  design_file.hpp  design_file.hpp~
src/templates/: CMakeLists.txt  Makefile  main  main.cpp  sc_main  sc_main.cpp
src/verilog/parser/: CMakeLists.txt  basic_identifier.cpp  basic_identifier.hpp  basic_identifier_list.cpp  basic_identifier_list.hpp  design_file.cpp  design_file.hpp  design_unit.cpp  design_unit.hpp  list.hpp  module.cpp  module.hpp  module.mk  simple_identifier.cpp  simple_identifier.hpp
src/verilog/scanner/: CMakeLists.txt  Makefile  defines.hpp  scanner.cpp  scanner.hpp
src/version/: .gitignore  CMakeLists.txt  Makefile  generate.sh  version.sh
src/vhdl/: Architecture.cpp  Architecture.h  DesignUnit.cpp  DesignUnit.h  Entity.cpp  Entity.h  Scanner.cpp  Scanner.h  architecture.cpp  defines.h  entity.cpp  module.mk
src/vhdl/ast/: architecture.hpp  basic_identifier.hpp  basic_identifier_list.hpp  context_clause.hpp  design_file.hpp  design_unit.hpp  entity.hpp  use_clause.hpp
src/vhdl/parser/: CMakeLists.txt  Makefile  alias_declaration.cpp  alias_declaration.hpp  architecture.cpp  architecture.hpp  array_definition.cpp  array_definition.hpp  array_subtype_definition.cpp  array_subtype_definition.hpp  array_type.cpp  array_type.hpp  assignment.cpp  assignment.hpp  association_element.cpp  association_element.hpp  association_element_formal_part.cpp  association_element_formal_part.hpp  association_list.cpp  association_list.hpp  attribute.cpp  attribute.hpp  basic_identifier.cpp  basic_identifier.hpp  basic_identifier_list.cpp  basic_identifier_list.hpp  block_statement.cpp  block_statement.hpp  case_statement.cpp  case_statement.hpp  case_statement_alternative.cpp  case_statement_alternative.hpp  case_statement_choise.cpp  case_statement_choise.hpp  character.cpp  character.hpp  choise.cpp  choise.hpp  choises.cpp  choises.hpp  (+137 more)
src/vhdl/scanner/: CMakeLists.txt  defines.hpp  module.mk  scanner.cpp  scanner.hpp
std/: #standard.hpp#  #textio.hpp#  .#textio.hpp  .gitignore  .jhdl.ini  Makefile  dump.txt  env.cpp  env.vhd  env_foreign.cpp  standard.cpp  standard.h  standard.vhd  standard_foreign.cpp  std_env.hpp  std_standard.hpp  std_textio.hpp  textio.vhd  textio_foreign.cpp
synopsys/: .gitignore  Makefile
systemc/: .gitignore  Makefile  include.mak  install.sh  setup.sh
templates/: CMakeLists.txt  Makefile
test/: test.cpp
test/generator/: .gitignore  Makefile  unit_parameters.cpp
test/parser/: a.out  test.cpp
testsuite/: .gitignore  envsetup.sh  test.sh
testsuite/failure/first_token_error/: test.vhdl
testsuite/failure/name_mismatch/: test.vhdl
testsuite/failure/token_error/: test.vhdl
testsuite/failure/vhdl/first_token_error/: test.sh
testsuite/failure/vhdl/minimal_simulation/: test  test.cpp  test.hpp  (+2 more)
testsuite/minimal/: test.sh  test.vhdl
testsuite/success/entity/: test.vhdl
testsuite/success/minimal/: test.sh
testsuite/success/useclause/: test.vhdl
testsuite/success/vhdl/: .gitignore
(+80 files in other folders)
